--- a/templates/base.html
+++ b/templates/base.html
@@ -7,5 +7,12 @@
   </head>
   <body>
     <h1>My Todo List 2022</h1>
+    <form action="">
+      <div>
+        <label for="title">New Todo</label>
+        <input type="text" name="title" placeholder="Enter a note..." />
+        <button type="submit">Add</button>
+      </div>
+    </form>
   </body>
 </html>
