--- a/templates/base.html
+++ b/templates/base.html
@@ -14,5 +14,9 @@
         <button type="submit">Add</button>
       </div>
     </form>
+
+    {% for todo in todo_list %}
+    <p>{{todo.id}} | {{todo.title}}</p>
+    {% endfor %}
   </body>
 </html>
