--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <h1>My Todo List 2022</h1>
-    <form action="">
+
+    <!--the form action redirect to the add function in the app file and exectutes it--!>
+    <form action="/add" method="post">
       <div>
         <label for="title">New Todo</label>
         <input type="text" name="title" placeholder="Enter a note..." />
