--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
         {% endif %}
 
         <button class="btn" onclick="location.href = '/update/{{ todo.id }}'">Update</button>
+        <button class="btn" onclick="location.href = '/delete/{{ todo.id }}'">Delete</button>
     </div>
     {% endfor %}
   </body>
