--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
         <span>Completed</span>
         {% endif %}
         <button class="btn1" onclick="location.href = '/update/{{ todo.id }}'">
-          Update
+          <i class="fa fa-check"></i> Check
         </button>
         <button class="btn2" onclick="location.href = '/delete/{{ todo.id }}'">
           <i class="fa fa-trash"></i>
