--- a/static/styles.css
+++ b/static/styles.css
@@ -5,6 +5,53 @@
   box-sizing: border-box;
 }
 
+/* Style the header */
+header {
+  background: linear-gradient(
+    90deg,
+    rgba(131, 58, 180, 1) 0%,
+    rgba(253, 29, 29, 1) 50%,
+    rgba(252, 176, 69, 1) 100%
+  );
+  padding: 30px 40px;
+  color: white;
+  text-align: center;
+}
+
+h1 {
+  font-family: 'Acme', sans-serif;
+  letter-spacing: 2px;
+  margin-bottom: 15px;
+}
+
+input {
+  width: 75%;
+  margin-right: 0;
+  padding: 10px;
+  border: none;
+  font-size: 14px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.addBtn {
+  width: 25%;
+  padding: 10px;
+  margin-left: 0;
+  background: #d9d9d9;
+  color: #555;
+  text-align: center;
+  font-size: 14px;
+  cursor: pointer;
+  transition: 0.3s;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+}
+
+.addBtn:hover {
+  background-color: #bbb;
+  color: #fff;
+}
+
 /* Remove margins and padding from the list */
 ul {
   margin: 0;
@@ -13,18 +60,10 @@ ul {
 
 /* Style the list items */
 ul li {
-  cursor: pointer;
   position: relative;
   padding: 12px 8px 12px 40px;
   background: #eee;
   font-size: 18px;
-  transition: 0.2s;
-
-  /* make the list items unselectable */
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
 }
 
 /* Set all odd list items to a different color (zebra-stripes) */
@@ -37,4 +76,40 @@ li p.checked {
   background: #888;
   color: #fff;
   text-decoration: line-through;
+}
+
+/* add a pointer hand for invite to click*/
+li button.btn {
+  cursor: pointer;
+}
+
+/* Check button normal style */
+li button.btn1 {
+  background-color: #008cba; /* Blue */
+  border: none;
+  color: white;
+  padding: 12px 28px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+}
+
+/* Check button hover style */
+li button.btn1:hover {
+  background-color: #4caf50; /* Green */
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+/* Trash button normal style */
+li button.btn2 {
+  background-color: #ff6347;
+  border: none;
+  color: white;
+  padding: 12px 28px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
 }
