--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
       <form action="/add" method="post">
         <label for="title">New Todo</label>
         <input type="text" name="title" placeholder="Enter a note..." />
-        <button type="submit">Add</button>
+        <button class="addBtn" type="submit">Add</button>
       </form>
     </header>
 
@@ -30,10 +30,16 @@
         {% else %}
         <p class="checked">{{todo.title}}</p>
         {% endif %}
-        <button class="btn1" onclick="location.href = '/update/{{ todo.id }}'">
+        <button
+          class="btn1 btn"
+          onclick="location.href = '/update/{{ todo.id }}'"
+        >
           <i class="fa fa-check"></i> Check
         </button>
-        <button class="btn2" onclick="location.href = '/delete/{{ todo.id }}'">
+        <button
+          class="btn2 btn"
+          onclick="location.href = '/delete/{{ todo.id }}'"
+        >
           <i class="fa fa-trash"></i>
         </button>
       </li>
