--- a/static/styles.css
+++ b/static/styles.css
@@ -107,9 +107,12 @@ li button.btn2 {
   background-color: #ff6347;
   border: none;
   color: white;
-  padding: 12px 28px;
+  padding: 16px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 14px;
+  border-radius: 50%;
+  position: absolute;
+  right: 0;
 }
