add some comments

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <h1>My Todo List 2022</h1>
-      <!-- the form action redirect to the add function in the app file and exectutes it -->
+      <!-- the form action redirect to the add function in the app file and executes it -->
       <form action="/add" method="post">
         <label for="title">New Todo</label>
         <input type="text" name="title" placeholder="Enter a note..." />
